REGRESSION (r264101): Sharing a link attaches an image instead of the URL https://bugs.webkit.org/show_bug.cgi?id=214329 <rdar://problem/65513607>

Reviewed by Tim Horton and Devin Rousso.

Source/WebKit:

r264101 added logic that attempts to share an activated (i.e. long-pressed) element as an image, if the image
URL scheme for the element is equal to "data" (ignoring case sensitivity). However, in the case where the image
URL is nil, the call to `[element.imageURL.scheme caseInsensitiveCompare:@"data"]` is 0, which (conveniently) is
equal to `NSOrderedSame`. This causes us to incorrectly proceed by sharing the element as an image.

Fix this by going through URL::protocolIsData(), so we don't end up with 0 (`NSOrderedSame`) when
`element.imageURL.scheme` is `nil`.

Test: ShareSheetTests.ShareAnchorElementAsURL

* UIProcess/ios/WKActionSheetAssistant.mm:
(-[WKActionSheetAssistant handleElementActionWithType:element:needsInteraction:]):

Tools:

Add a new API test to verify that the "share action" for a link shares the URL, rather than a snapshot of the
anchor element.

* TestWebKitAPI/Tests/ios/ShareSheetTests.mm:


Canonical link: https://commits.webkit.org/227137@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@264383 268f45cc-cd09-0410-ab3c-d52691b4dbfc